multimail: update to latest upstream version

--- a/news/multimail/Portfile
+++ b/news/multimail/Portfile
@@ -15,9 +15,11 @@ long_description    ${name} MultiMail is an offline mail packet reader for Unix/
                     It supports the Blue Wave, QWK, OMEN, SOUP and OPX formats.
 homepage            http://wmcbrine.com/mmail/
 
-github.setup        wmcbrine MultiMail 55b584461e7c4f21010ab83bbd6d109f561734a3
-version             20150922
-fetch.type          git
+github.setup        wmcbrine MultiMail 2e4479f0e6e52e7ca0ceeb81cb0fe61b7071c456
+version             20160105
+
+checksums           rmd160  0102b4c82446c99ca1df5542ec03fbc6f4ed9b7d \
+                    sha256  164113e108d6e24614716d352bec80a0debe83f6268780a680c68d7b369963ae
 
 depends_run         port:zip
 depends_lib         port:ncurses
@@ -26,9 +28,12 @@ use_configure       no
 
 pre-destroot {
     reinplace -W ${worksrcpath} "s|PREFIX)/man|PREFIX)/share/man|g" Makefile
+
+    xinstall -d ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath} COPYING HISTORY.md README.md \
+        ${destroot}${prefix}/share/doc/${name}
+
 }
 
 destroot.args       PREFIX=${destroot}${prefix}
-
-livecheck.type      none
 
