--- a/python/pythonprop/Portfile
+++ b/python/pythonprop/Portfile
@@ -56,6 +56,7 @@ depends_run         port:adwaita-icon-theme \
                     port:yelp \
                     port:voacapl
 
+configure.env-append    PYTHON="${prefix}/bin/python${python.branch}"
 build.target        {}
 
 subport ${name}-devel {
@@ -85,6 +86,12 @@ patch {
         reinplace -W ${worksrcpath}/docs/user/help "s+^pdf_DATA+#pdf_DATA+g" Makefile.am
         reinplace -W ${worksrcpath}/docs/user/help "s+^voacapgui.pdf:+#voacapgui.pdf:+g" Makefile.am
         reinplace -W ${worksrcpath}/docs/user/help "s+^	dblatex C+#	dblatex C+g" Makefile.am
+    }
+}
+
+post-destroot {
+    foreach f [glob -directory ${destroot}${prefix}/bin *] {
+        reinplace "s+env python3+env python${python.branch}+g" ${f}
     }
 }
 
