--- a/python/py-cairocffi/Portfile
+++ b/python/py-cairocffi/Portfile
@@ -1,16 +1,15 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
-# $Id$
 
 PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-cairocffi
-version             0.7.2
+version             0.8.0
 categories-append   devel
 platforms           darwin
 license             Permissive
 
-python.versions     26 27 33 34 35
+python.versions     26 27 33 34 35 36
 
 maintainers         gmail.com:allan.que openmaintainer
 
@@ -19,13 +18,13 @@ description         CFFI-based drop-in replacement for Pycairo
 long_description    ${name} s a CFFI-based drop-in replacement for Pycairo, \
                     a set of Python bindings and object-oriented API for cairo.
 
-homepage            https://pythonhosted.org/cairocffi/
+homepage            http://cairocffi.readthedocs.io
 master_sites        pypi:[string index ${python.rootname} 0]/${python.rootname}
 
 distname            ${python.rootname}-${version}
 
-checksums           rmd160  e57036784d3444b7132fd3c2e732a29ad0286d20 \
-                    sha256  e42b4256d27bd960cbf3b91a6c55d602defcdbc2a73f7317849c80279feeb975
+checksums           rmd160  ef591d28ca183e829b446b77bcd79069e3b00554 \
+                    sha256  65f21e6786e2b255ab1d3fda53a365a3565bb1808cabbbe59d99a797c61d3545
 
 if {${name} ne ${subport}} {
     depends_build-append \
