--- a/net/iperf/Portfile
+++ b/net/iperf/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                iperf
-version             2.0.10
+version             2.0.11
 categories          net
 platforms           darwin
 license             permissive
@@ -21,8 +21,9 @@ master_sites        sourceforge:iperf2
 
 conflicts           ${name}-devel
 
-checksums           rmd160  d7062b7f619d28e129f478c94fdcc48a59ba76d8 \
-                    sha256  7fe4348dcca313b74e0aa9c34a8ccd713b84a5615b8578f4aa94cedce9891ef2
+checksums           rmd160  3f77baa8da2b5ffba4105a83c135676dec6ab828 \
+                    sha256  b7d650d07c6bb0e357b5938a20e4ac33876012fddb952299c5d321e6958da5d2 \
+                    size    330923
 
 subport ${name}-devel {
     version         20180410
