--- a/sysutils/bitfit/Portfile
+++ b/sysutils/bitfit/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           github 1.0
 
-github.setup        joswr1ght bitfit 1.1.2 v
+github.setup        joswr1ght bitfit 1.1.3 v
 categories          sysutils python
 maintainers         gmail.com:allan.que openmaintainer
 license             MIT
@@ -17,8 +17,9 @@ long_description    Recursively validate a starting directory of file contents \
 
 homepage            https://github.com/joswr1ght/bitfit
 
-checksums           rmd160  39a40463d8ad3c2f757b38de602903500de1820e \
-                    sha256  2979580247717be3efda30b26e399bb9e1dfad6bee7b2d61d66a7c1eecd60c17
+checksums           rmd160  310becad053b0eb6789e4c33bd68de7a9f47c77c \
+                    sha256  a2170216dfc9336ec5a90808faf368ccf2b9ed816f32e5bec8475f3997441ddf \
+                    size    2615803
 
 use_configure       no
 
