--- a/news/multimail/Portfile
+++ b/news/multimail/Portfile
@@ -14,12 +14,12 @@ long_description    ${name} MultiMail is an offline mail packet reader for Unix/
                     It supports the Blue Wave, QWK, OMEN, SOUP and OPX formats.
 homepage            http://wmcbrine.com/mmail/
 
-github.setup        wmcbrine MultiMail 12565e6ea2567184d43218829eddd872c3fb0aa6
-version             20190528
+github.setup        wmcbrine MultiMail 9271ba247640b70460a503c3e1a4387c4734de70
+version             20190806
 
-checksums           rmd160  f5df049f08138b930e08f1df88536474f5ff84a2 \
-                    sha256  6506873f466f82f99865b73cd42d49505ae514df16a08f347971b6ca998946ff \
-                    size    221635
+checksums           rmd160  6fbc48e474cce2cf9d3a3b48c601a690a214d506 \
+                    sha256  93b3fb8b4559b3c12d000699b9668b11c0c82e431ec80cc94ed36f816d058b1c \
+                    size    221694
 
 depends_run         port:zip
 depends_lib         port:ncurses
@@ -32,6 +32,11 @@ pre-destroot {
     xinstall -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} COPYING.md HISTORY.md README.md \
         ${destroot}${prefix}/share/doc/${name}
+
+    xinstall -d ${destroot}${prefix}/share/examples/${name}
+    foreach f [glob -directory ${worksrcpath}/colors *] {
+        xinstall -m 644 ${f} ${destroot}${prefix}/share/examples/${name}
+    }
 
 }
 
