--- a/python/py-whois/Portfile
+++ b/python/py-whois/Portfile
@@ -1,13 +1,13 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
-# $Id$
 
 PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-whois
-version             0.7
+version             0.9.4
 categories-append   net
 platforms           darwin
+supported_archs     noarch
 license             Permissive
 
 python.versions     27 36
@@ -18,13 +18,14 @@ description         Python wrapper for Linux 'whois' command
 
 long_description    ${description}
 
-homepage            https://github.com/DDarko/python-whois/
+homepage            https://pypi.python.org/pypi/${python.rootname}/
 master_sites        pypi:[string index ${python.rootname} 0]/${python.rootname}
 
 distname            ${python.rootname}-${version}
 
-checksums           rmd160  dd15dd869904ddbba9d84ff093b9b10013b7530c \
-                    sha256  788ba4fa4986d06351c1572f63ef1576d26f3cd5ecf5d999934421540c87021c
+checksums           rmd160  904f54fb69befc765ecac08ea3b7e4e565f8c81e \
+                    sha256  ee7fd23b13cdf33b94d633a31edac9f4e4015a72455f5d669837a8ad100612ce \
+                    size    6626
 
 if {${name} ne ${subport}} {
     depends_build-append \
