--- a/net/iperf/Portfile
+++ b/net/iperf/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                iperf
-version             2.0.13
+version             2.0.14a
 categories          net
 platforms           darwin
 license             permissive
@@ -21,9 +21,9 @@ master_sites        sourceforge:iperf2
 
 conflicts           ${name}-devel
 
-checksums           rmd160  199ccc03cabb48e825b948688bbc1867369cf9ef \
-                    sha256  c88adec966096a81136dda91b4bd19c27aae06df4d45a7f547a8e50d723778ad \
-                    size    326148
+checksums           rmd160  49793734b2acf649b84da5a5830b0bc983cfe38b \
+                    sha256  6fc8a17f0ef8c3c616fd8a499223368d3890c62f64ddb90863709f4c0a1e800b \
+                    size    375288
 
 subport ${name}-devel {
     version         20190923
